--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "homepage": "https://github.com/reoring/fusion_module",
     "license": "MIT",
     "require": {
-        "php": ">=5.4.5"
+        "php": ">=5.4.5",
+        "twig/twig": "1.12.*"
     },
     "config": {
         "bin-dir": "bin"
